2016-11-13  Bruno Haible  <bruno@clisp.org>

	Add support for Linux/x32 ABI on x86_64.
	* lispbibl.d (WIDE_HARD): Define depending on long_bitsize and
	pointer_bitsize, not on preprocessor defines like __x86_64__.
	(LINUX_NOEXEC_HEAPCODES): Pick as default memory model on Linux/x32.
	Don't forbid SINGLEMAP_MEMORY on Linux/x32.

2016-11-13  Bruno Haible  <bruno@clisp.org>

	Prepare for ILP32 ABIs on 64-bit CPUs (x32 on x86_64, n32 on MIPS64).
	* lispbibl.d (bitQ, bitQm, bitQ_test, minus_bitQ, minus_bitQm): New
	macros, available when intQsize is defined.
	* intsqrt.d (UDS_sqrt_) [ifdef intQsize]: Use bitQ(..) instead of
	bit(..).
	* dfloat.d (dfloat_decode, encode_DF, double_to_DF, DF_ftruncate_DF,
	DF_futruncate_DF, DF_fround_DF, DF_minus_DF, DF_DF_plus_DF,
	DF_DF_minus_DF, DF_DF_mult_DF, DF_DF_div_DF, DF_sqrt_DF, I_to_DF,
	RA_to_DF) [ifdef intQsize]: Likewise.
	* flo_konv.d (DF_to_SF, DF_to_FF, LF_to_DF) [ifdef intQsize]: Likewise.
	* flo_rest.d (F_decode_float_F_I_F, F_float_sign_F) [ifdef intQsize]:
	Likewise.
	* lisparit.d (init_arith): Likewise.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove old Linux workaround.
	* makemake.in (XCFLAGS): Remove workaround for Linux < 1.1.52.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Remove old GCC bug workaround.
	* lispbibl.d (DYNAMIC_ARRAY): Remove old GCC 2.5.5 workaround.

2016-11-12  Bruno Haible  <bruno@clisp.org>

	Modernize: Update to automake-1.15, libtool-2.4.6, the newest gnulib.
	* Makefile.devel (LIBTOOL_VERSION): Bump to 2.4.6.
	(AUTOMAKE_VERSION): Bump to 1.15.
	(GTK_GIT_ROOT): New variable, replaces GTK2_SVN_ROOT.
	(GNULIB_AUX, build-aux-update): Fetch 'missing' from Automake, not from
	gnulib.
	Update relative paths of files from libtool tarball.
	Fetch both gtk-2.0.m4 and gtk-3.0.m4.

	* m4/libtool.m4: Update from libtool-2.4.6.
	* m4/ltoptions.m4: Likewise.
	* m4/ltsugar.m4: Likewise.
	* m4/ltversion.m4: Likewise.
	* m4/lt~obsolete.m4: Likewise.